--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,9 @@ requires-python = ">=3.11"
 # Core runtime deps are intentionally minimal for now.
 dependencies = []
 
+[project.scripts]
+fruitful-search = "tui.__main__:main"
+
 [project.optional-dependencies]
 tui = [
   "textual>=0.50,<1",
@@ -32,3 +35,5 @@ dev = [
 requires = ["setuptools>=61"]
 build-backend = "setuptools.build_meta"
 
+[tool.setuptools]
+packages = ["core", "tui"]
