--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,7 +6,9 @@ readme = "README.md"
 requires-python = ">=3.11"
 
 # Core runtime deps are intentionally minimal for now.
-dependencies = []
+dependencies = [
+    "textual>=0.89.1",
+]
 
 [project.scripts]
 fruitful-search = "tui.__main__:main"
