--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,9 @@ requires-python = ">=3.11"
 
 # Core runtime deps are intentionally minimal for now.
 dependencies = [
+    "pandas>=2.3.2",
+    "pyarrow>=18.1.0",
+    "requests>=2.32.5",
     "textual>=0.89.1",
 ]
 
